--- a/css/index.css
+++ b/css/index.css
@@ -62,3 +62,28 @@ img {
   color: white;
   text-align: center;
 }
+.todo{
+  position: relative;
+  top: 30vh;
+  font-size: 25px;
+  text-align: center;
+  color: white;
+  
+}
+.todo input{
+  background: transparent;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid white;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+}
+.todo input:focus{
+  outline: none;
+}
+
+#todo-list{
+  list-style: none;
+}
